@@ -6,5 +6,6 @@
    */
 
 define('BLOG_VIEW_DATE_FORMAT', '%T, %A, %B %e');
+define('MAX_BLOG_CACHE_PAGES', 3);
 
 ?>
