@@ -15,5 +15,6 @@ $settings['simple_image']            = 1;
 $settings['max_width']               = 300;
 $settings['max_height']              = 300;
 $settings['anonymous_comments']      = 1;
+$settings['captcha_submissions']     = 1;
 
 ?>
